Make semantic sections the menu authoring contract