@@ -1,447 +1,358 @@
 package sh.harold.library.menu.core;
 
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.TextComponent;
 import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.Style;
 import net.kyori.adventure.text.format.TextColor;
 import net.kyori.adventure.text.format.TextDecoration;
 import org.junit.jupiter.api.Test;
-import sh.harold.library.menu.AccentFamily;
 import sh.harold.library.menu.ActionVerb;
 import sh.harold.library.menu.MenuButton;
+import sh.harold.library.menu.MenuChecklistEntry;
 import sh.harold.library.menu.MenuDisplayItem;
 import sh.harold.library.menu.MenuIcon;
-import sh.harold.library.menu.MenuOptionLine;
-import sh.harold.library.menu.MenuPair;
+import sh.harold.library.menu.MenuProgress;
+import sh.harold.library.menu.MenuProgressPalette;
 import sh.harold.library.menu.MenuSlot;
-import sh.harold.library.ui.value.UiValues;
 
+import java.util.ArrayList;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class HouseMenuCompilerTest {
 
     @Test
-    void singularLinesRenderAsSeparatedBlocks() {
+    void sectionsHaveExactlyOneBlankBetweenThemAndNoneAtTheEdges() {
+        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
+                .name("Oddities")
+                .section(section -> section
+                        .valueLine(Component.text("Buy price: ", NamedTextColor.GRAY),
+                                Component.text("12,683,091 coins", NamedTextColor.GOLD))
+                        .mutedLine("5.9k in 409 offers")
+                        .mutedLine("90.5k insta-buys in 7d"))
+                .description("A second semantic section.")
+                .build();
+
+        assertEquals(List.of(
+                "Buy price: 12,683,091 coins",
+                "5.9k in 409 offers",
+                "90.5k insta-buys in 7d",
+                "",
+                "A second semantic section."), lore(item));
+    }
+
+    @Test
+    void directCallsEachCreateASectionWhileMixedSectionRowsRemainContiguous() {
         MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
                 .name("Card")
                 .line("a")
                 .line("b")
+                .section(section -> section.line("c").mutedLine("d"))
                 .build();
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of("a", "", "b"), lore(slot));
+        assertEquals(List.of("a", "", "b", "", "c", "d"), lore(item));
     }
 
     @Test
-    void pluralLinesRenderAsContiguousBlock() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name("Card")
-                .lines("a", "b")
+    void greedyWrappingUsesAnExact240PixelBoundary() {
+        String exact = "a".repeat(34) + "!";
+        assertEquals(240, MinecraftFontMetrics.width(exact));
+
+        MenuDisplayItem exactItem = MenuDisplayItem.builder(MenuIcon.vanilla("paper"))
+                .name("Boundary")
+                .description(exact)
+                .build();
+        MenuDisplayItem overflow = MenuDisplayItem.builder(MenuIcon.vanilla("paper"))
+                .name("Boundary")
+                .description(exact + " b")
                 .build();
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of("a", "b"), lore(slot));
+        assertEquals(List.of(exact), lore(exactItem));
+        assertEquals(List.of(exact, "b"), lore(overflow));
     }
 
     @Test
-    void descriptionWrapsByCharacterCountAndIgnoresTitleLength() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name("An Extremely Long Menu Title That Should Not Affect Lore Wrapping")
-                .description("View your equipment, stats, and more!")
+    void wrappingCollapsesWhitespaceAndIgnoresItemTitleWidth() {
+        String paragraph = "  Alpha\n  beta\t gamma   delta  ";
+        MenuDisplayItem shortTitle = MenuDisplayItem.builder(MenuIcon.vanilla("paper"))
+                .name("A")
+                .description(paragraph)
+                .build();
+        MenuDisplayItem longTitle = MenuDisplayItem.builder(MenuIcon.vanilla("paper"))
+                .name("An Extremely Long Title Which Must Never Affect Lore Width")
+                .description(paragraph)
                 .build();
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of(
-                "",
-                "View your equipment,",
-                "stats, and more!"), lore(slot));
+        assertEquals(List.of("Alpha beta gamma delta"), lore(shortTitle));
+        assertEquals(lore(shortTitle), lore(longTitle));
     }
 
     @Test
-    void softLineStaysSingleLineWhenItFitsWithinThirtyCharacters() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name("Card")
-                .softLine("Alpha Bravo Charlie Delta Echo")
+    void resolvedBoldStyleChangesWrappingAndCannotCollideInTheCache() {
+        String prose = "a ".repeat(20).trim();
+        Component bold = Component.text(prose).decorate(TextDecoration.BOLD);
+
+        MenuDisplayItem plainItem = MenuDisplayItem.builder(MenuIcon.vanilla("paper"))
+                .name("Plain")
+                .description(prose)
+                .build();
+        MenuDisplayItem boldItem = MenuDisplayItem.builder(MenuIcon.vanilla("paper"))
+                .name("Bold")
+                .description(bold)
                 .build();
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of("Alpha Bravo Charlie Delta Echo"), lore(slot));
+        assertEquals(1, HouseMenuCompiler.compile(0, plainItem).lore().size());
+        assertEquals(2, HouseMenuCompiler.compile(0, boldItem).lore().size());
+        assertTrue(HouseMenuCompiler.compile(0, boldItem).lore().stream()
+                .flatMap(line -> runs(line).stream())
+                .allMatch(run -> run.text().isBlank()
+                        || run.style().decoration(TextDecoration.BOLD) == TextDecoration.State.TRUE));
     }
 
     @Test
-    void descriptionBalancesLinesToAvoidHangingLastWord() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("golden_hoe"))
-                .name("Farming XLIX")
-                .description("Harvest crops and shear sheep to earn Farming XP!")
+    void styledSpansSurviveLineBreaks() {
+        Component prose = Component.text()
+                .append(Component.text("Alpha beta gamma delta epsilon ", NamedTextColor.GRAY))
+                .append(Component.text("zeta eta theta iota kappa lambda mu", NamedTextColor.AQUA))
                 .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of(
-                "",
-                "Harvest crops and shear",
-                "sheep to earn Farming XP!"), lore(slot));
-    }
-
-    @Test
-    void secondarySitsDirectlyUnderTitleAndDescriptionGetsLowerSpacer() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name("Card")
-                .secondary("Starter Pack")
-                .description("Call lightning on the active player.")
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of(
-                "Starter Pack",
-                "",
-                "Call lightning on",
-                "the active player."), lore(slot));
-    }
-
-    @Test
-    void mutedLineRendersAsSeparateDarkGrayMetadataBlock() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("lightning_rod"))
-                .name("Lightning")
-                .secondary("Starter Pack")
-                .description("Call lightning on the active player. Damage is optional.")
-                .mutedLine("ID: TWITCH.LIGHTNING")
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of(
-                "Starter Pack",
-                "",
-                "Call lightning on the active",
-                "player. Damage is optional.",
-                "",
-                "ID: TWITCH.LIGHTNING"), lore(slot));
-        assertEquals(NamedTextColor.DARK_GRAY, slot.lore().getLast().color());
-    }
-
-    @Test
-    void mutedLineWrapsLongFlavorCopyAsDarkGrayBlock() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("name_tag"))
-                .name("Flip Mobs Upside-Down")
-                .description("Turns nearby mobs upside down.")
-                .mutedLine("we got upside down honse tech before GTA 6. Incredible.")
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of(
-                "",
-                "Turns nearby mobs upside down.",
-                "",
-                "we got upside down honse tech",
-                "before GTA 6. Incredible."), lore(slot));
-        assertEquals(NamedTextColor.DARK_GRAY, slot.lore().get(3).color());
-        assertEquals(NamedTextColor.DARK_GRAY, slot.lore().get(4).color());
-    }
-
-    @Test
-    void optionLinesRenderSelectedArrowAndMuteInactiveColors() {
-        TextColor selectedColor = TextColor.color(0xFFAA00);
-        TextColor inactiveColor = TextColor.color(0x55FFFF);
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("hopper"))
-                .name("Filter")
-                .optionLines(
-                        new MenuOptionLine("All", selectedColor, true),
-                        new MenuOptionLine("Tag: pain", inactiveColor, false))
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of("→ All", "   Tag: pain"), lore(slot));
-        Component selectedLine = slot.lore().getFirst();
-        Component inactiveLine = slot.lore().get(1);
-
-        assertEquals(TextDecoration.State.TRUE, selectedLine.children().get(0).decoration(TextDecoration.BOLD));
-        assertEquals(selectedColor, selectedLine.children().get(0).color());
-        assertEquals(selectedColor, selectedLine.children().get(1).color());
-        assertNotEquals(TextDecoration.State.TRUE, inactiveLine.children().get(0).decoration(TextDecoration.BOLD));
-        assertEquals(inactiveLine.children().get(0).color(), inactiveLine.children().get(1).color());
-        assertNotEquals(inactiveColor, inactiveLine.children().get(1).color());
-        assertNotEquals(selectedColor, inactiveLine.children().get(1).color());
-    }
-
-    @Test
-    void optionLinesCanRenderSlidingWindowAroundSelection() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("comparator"))
-                .name("Sort")
-                .optionLines(3, List.of(
-                        new MenuOptionLine("A-Z", TextColor.color(0xF7E29A), false),
-                        new MenuOptionLine("Z-A", TextColor.color(0xE8BE74), false),
-                        new MenuOptionLine("Popularity", TextColor.color(0xFF8C57), true),
-                        new MenuOptionLine("Category", TextColor.color(0x73C9B7), false),
-                        new MenuOptionLine("Tags", TextColor.color(0x7DB4F5), false)))
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of("   Z-A", "→ Popularity", "   Category"), lore(slot));
-    }
-
-    @Test
-    void bulletsStayOnOneLineUntilTheyReachTheBulletHardLimit() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("golden_hoe"))
-                .name("Farming XLIX")
-                .bullet("Grants +196 to +200 Farming Fortune")
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of("• Grants +196 to +200 Farming Fortune"), lore(slot));
-    }
-
-    @Test
-    void bulletsKeepHangingIndentOnceTheyExceedTheBulletHardLimit() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("golden_hoe"))
-                .name("Farming XLIX")
-                .bullet("Review every centered layout guideline before placing showcase cards across the wider canvas.")
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of(
-                "• Review every centered layout guideline before",
-                "  placing showcase cards across the wider canvas."), lore(slot));
-    }
-
-    @Test
-    void multiEntrySoftLinesStayOnSingleLoreLines() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name("Card")
-                .softLines(
-                        "This deliberately long stat line should stay intact.",
-                        "This second deliberately long stat line should also stay intact.")
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of(
-                "This deliberately long stat line should stay intact.",
-                "This second deliberately long stat line should also stay intact."), lore(slot));
-    }
-
-    @Test
-    void multiEntrySoftPairsStayOnSingleLoreLines() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name("Card")
-                .softPairs(
-                        "Selected Power", "Silky reforges grant a lot of crit damage for this setup.",
-                        "Stored Layout", "This wardrobe loadout should stay on one pair line.")
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of(
-                "Selected Power: Silky reforges grant a lot of crit damage for this setup.",
-                "Stored Layout: This wardrobe loadout should stay on one pair line."), lore(slot));
-    }
-
-    @Test
-    void valueLinesPreserveExplicitArgumentColors() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name("Card")
-                .valueLine("Bits Available ", UiValues.prettyNumber(10_420, 0x55FFFF))
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        Component line = slot.lore().getFirst();
-        assertEquals(NamedTextColor.GRAY, line.children().get(0).color());
-        assertEquals(TextColor.color(0x55FFFF), line.children().get(1).color());
-    }
-
-    @Test
-    void itemTitlesPreserveExplicitFeelColors() {
-        MenuSlot reward = HouseMenuCompiler.compile(13, MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name(FakeSkyBlockMenuTitles.reward("Museum Rewards"))
-                .build());
-        MenuSlot perk = HouseMenuCompiler.compile(13, MenuDisplayItem.builder(MenuIcon.vanilla("beacon"))
-                .name(FakeSkyBlockMenuTitles.perk("Perks"))
+        MenuSlot slot = HouseMenuCompiler.compile(0, MenuDisplayItem.builder(MenuIcon.vanilla("paper"))
+                .name("Styled")
+                .description(prose)
                 .build());
 
-        assertEquals(TextColor.color(0xFFAA00), reward.title().color());
-        assertEquals(TextColor.color(0x55FFFF), perk.title().color());
+        assertTrue(slot.lore().size() > 1);
+        assertTrue(slot.lore().stream()
+                .flatMap(line -> runs(line).stream())
+                .anyMatch(run -> run.style().color() == NamedTextColor.AQUA));
+        assertTrue(slot.lore().getLast().children().stream()
+                .flatMap(child -> runs(child).stream())
+                .anyMatch(run -> run.style().color() == NamedTextColor.AQUA));
     }
 
     @Test
-    void pairValuesPreserveExplicitColors() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name("Card")
-                .pair("Cost", UiValues.prettyNumber(2_750, 0x55FF55))
-                .build();
+    void structuredPrefixesConsumeWidthAndContinuationUsesNearestSpaceIndent() {
+        String value = "a ".repeat(20).trim();
+        Component prefix = Component.text("Selected Route: ", NamedTextColor.GRAY);
+        MenuSlot slot = HouseMenuCompiler.compile(0, MenuDisplayItem.builder(MenuIcon.vanilla("map"))
+                .name("Route")
+                .valueLine(prefix, Component.text(value, NamedTextColor.AQUA))
+                .build());
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        Component line = slot.lore().getFirst();
-        assertEquals(NamedTextColor.GRAY, line.children().get(0).color());
-        assertEquals(TextColor.color(0x55FF55), line.children().get(1).color());
+        assertTrue(slot.lore().size() > 1);
+        String continuation = ComponentText.flatten(slot.lore().get(1));
+        int leadingSpaces = continuation.length() - continuation.stripLeading().length();
+        assertTrue(leadingSpaces > 0);
+        assertTrue(Math.abs(
+                MinecraftFontMetrics.width(" ".repeat(leadingSpaces))
+                        - MinecraftFontMetrics.width(prefix)) <= 3);
+        assertTrue(slot.lore().stream().allMatch(line -> MinecraftFontMetrics.width(line) <= 240));
     }
 
     @Test
-    void menuPairFactoryPreservesUiValueWhenValueIsTypedAsObject() {
-        Object xpToNext = UiValues.prettyNumber(4_800, 0x55FF55);
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name("Card")
-                .pairs(MenuPair.of("XP to Next", xpToNext))
+    void unicodeUsesCodePointsAndOrdinaryLongWordsAreNeverSplit() {
+        assertEquals(6, MinecraftFontMetrics.width("😀"));
+        String longWord = "😀".repeat(50);
+        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("paper"))
+                .name("Unicode")
+                .description(longWord)
                 .build();
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of("XP to Next: 4,800"), lore(slot));
-        Component line = slot.lore().getFirst();
-        assertEquals(NamedTextColor.GRAY, line.children().get(0).color());
-        assertEquals(TextColor.color(0x55FF55), line.children().get(1).color());
+        assertEquals(List.of(longWord), lore(item));
+        assertTrue(MinecraftFontMetrics.width(HouseMenuCompiler.compile(0, item).lore().getFirst()) > 240);
     }
 
     @Test
-    void softValueLinesKeepArgumentColorOnContinuation() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("book"))
-                .name("Card")
-                .softValueLine("Selected Route: ", UiValues.literal(
-                        "This deliberately long value should wrap and keep its shared accent color.", 0x55FFFF))
+    void explicitAndMutedLinesRemainLiteral() {
+        String longLine = "This deliberately long literal line remains intact even when its pixel width is well beyond the prose budget.";
+        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("paper"))
+                .name("Literal")
+                .line(longLine)
+                .mutedLine(longLine)
                 .build();
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(TextColor.color(0x55FFFF), slot.lore().get(1).color());
+        assertEquals(List.of(longLine, "", longLine), lore(item));
+        assertEquals(NamedTextColor.GRAY, resolvedColor(HouseMenuCompiler.compile(0, item).lore().getFirst()));
+        assertEquals(NamedTextColor.DARK_GRAY, resolvedColor(HouseMenuCompiler.compile(0, item).lore().getLast()));
     }
 
     @Test
-    void promptRendersLastAfterBodyBlocks() {
-        MenuButton button = MenuButton.builder(MenuIcon.vanilla("book"))
-                .name("Button")
-                .line("Body")
-                .action(ActionVerb.VIEW, context -> {})
+    void checklistUsesInsetMarkersAndPreservesIndependentLabelStyles() {
+        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("writable_book"))
+                .name("Requirements")
+                .checklist(
+                        MenuChecklistEntry.complete(Component.text("Reach level 10", NamedTextColor.YELLOW)),
+                        MenuChecklistEntry.incomplete(Component.text("Find the key", NamedTextColor.AQUA)))
                 .build();
+        MenuSlot slot = HouseMenuCompiler.compile(0, item);
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, button);
-
-        assertEquals(List.of("Body", "", "CLICK to view!"), lore(slot));
+        assertEquals(List.of(" ✔ Reach level 10", " ✖ Find the key"), lore(item));
+        assertTrue(hasRun(slot.lore().get(0), "✔", NamedTextColor.GREEN));
+        assertTrue(hasRun(slot.lore().get(0), "Reach", NamedTextColor.YELLOW));
+        assertTrue(hasRun(slot.lore().get(1), "✖", NamedTextColor.RED));
+        assertTrue(hasRun(slot.lore().get(1), "Find", NamedTextColor.AQUA));
     }
 
     @Test
-    void dualPromptsUseClickAndRightClickWithoutExtraSpacing() {
-        MenuButton button = MenuButton.builder(MenuIcon.vanilla("book"))
-                .name("Button")
-                .line("Body")
-                .action(ActionVerb.OPEN, context -> {})
-                .onRightClick(ActionVerb.BROWSE, context -> {})
+    void terminalStatusRendersAfterSectionsAndBeforePrompts() {
+        MenuButton item = MenuButton.builder(MenuIcon.vanilla("barrier"))
+                .name("Locked")
+                .description("Travel to the sealed chamber.")
+                .status(Component.text("Complete all requirements to enter.", NamedTextColor.RED))
+                .onLeftClick(ActionVerb.VIEW, context -> { })
                 .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, button);
-
-        assertEquals(List.of("Body", "", "CLICK to open!", "RIGHT CLICK to browse!"), lore(slot));
-
-        Component leftPrompt = slot.lore().get(2);
-        Component rightPrompt = slot.lore().get(3);
-
-        assertEquals(NamedTextColor.YELLOW, leftPrompt.children().get(0).color());
-        assertEquals(TextDecoration.State.TRUE, leftPrompt.children().get(0).decoration(TextDecoration.BOLD));
-        assertEquals(NamedTextColor.YELLOW, leftPrompt.children().get(1).color());
-
-        assertEquals(NamedTextColor.AQUA, rightPrompt.children().get(0).color());
-        assertEquals(TextDecoration.State.TRUE, rightPrompt.children().get(0).decoration(TextDecoration.BOLD));
-        assertEquals(NamedTextColor.AQUA, rightPrompt.children().get(1).color());
-    }
-
-    @Test
-    void shiftPromptsRenderVisiblePromptLines() {
-        MenuButton button = MenuButton.builder(MenuIcon.vanilla("book"))
-                .name("Button")
-                .line("Body")
-                .action(ActionVerb.OPEN, context -> {})
-                .onShiftLeftClick(ActionVerb.CONFIRM, "reset", context -> {})
-                .onRightClick(ActionVerb.BROWSE, context -> {})
-                .onShiftRightClick(ActionVerb.CONFIRM, "reset", context -> {})
-                .build();
-
-        MenuSlot slot = HouseMenuCompiler.compile(13, button);
 
         assertEquals(List.of(
-                "Body",
+                "Travel to the sealed chamber.",
                 "",
+                "Complete all requirements to enter.",
+                "",
+                "CLICK to view!"), lore(item));
+    }
+
+    @Test
+    void everyPromptIsYellowOrderedAndOnlyItsGestureIsBold() {
+        MenuButton item = MenuButton.builder(MenuIcon.vanilla("book"))
+                .name("Actions")
+                .onLeftClick(ActionVerb.OPEN, context -> { })
+                .onShiftLeftClick(ActionVerb.CONFIRM, "archive", context -> { })
+                .onRightClick(ActionVerb.BROWSE, context -> { })
+                .onShiftRightClick(ActionVerb.SELECT, "preview", context -> { })
+                .build();
+        MenuSlot slot = HouseMenuCompiler.compile(0, item);
+
+        assertEquals(List.of(
                 "CLICK to open!",
-                "SHIFT CLICK to reset!",
+                "SHIFT CLICK to archive!",
                 "RIGHT CLICK to browse!",
-                "SHIFT RIGHT CLICK to reset!"), lore(slot));
+                "SHIFT RIGHT CLICK to preview!"), lore(item));
+        for (Component prompt : slot.lore()) {
+            List<ResolvedRun> promptRuns = runs(prompt);
+            assertEquals(NamedTextColor.YELLOW, promptRuns.get(0).style().color());
+            assertEquals(TextDecoration.State.TRUE,
+                    promptRuns.get(0).style().decoration(TextDecoration.BOLD));
+            assertEquals(NamedTextColor.YELLOW, promptRuns.get(1).style().color());
+            assertEquals(TextDecoration.State.FALSE,
+                    promptRuns.get(1).style().decoration(TextDecoration.BOLD));
+            assertTrue(promptRuns.get(1).text().endsWith("!"));
+        }
     }
 
     @Test
-    void exactLorePreservesSourceLinesAndAppendsBodyBeforePrompt() {
-        MenuButton button = MenuButton.builder(MenuIcon.vanilla("book"))
-                .exactName(Component.text("Exact Button"))
-                .exactLore(Component.text("First Exact Line"), Component.text("Second Exact Line"))
-                .line("Ignored body")
-                .action(ActionVerb.SELECT, "give the item", context -> {})
+    void progressUsesCeilingFillUnclampedPercentAndTwentyFiveSpaceBar() {
+        assertProgress(-10, 100, 0, "-10%");
+        assertProgress(0, 100, 0, "0%");
+        assertProgress(0.01, 100, 1, "0%");
+        assertProgress(25, 100, 7, "25%");
+        assertProgress(100, 100, 25, "100%");
+        assertProgress(125, 100, 25, "125%");
+    }
+
+    @Test
+    void progressFormatsDecimalsUnitsAndAquaPalette() {
+        MenuProgress progress = MenuProgress.builder("Charge", 12.5, 20.5)
+                .unit("MP")
+                .palette(MenuProgressPalette.AQUA)
+                .build();
+        MenuSlot slot = HouseMenuCompiler.compile(0, MenuDisplayItem.builder(MenuIcon.vanilla("experience_bottle"))
+                .name("Charge")
+                .progress(progress)
+                .build());
+
+        assertEquals("Charge: 61%", ComponentText.flatten(slot.lore().getFirst()));
+        assertTrue(hasRun(slot.lore().getFirst(), "61%", NamedTextColor.AQUA));
+        assertTrue(ComponentText.flatten(slot.lore().get(1)).endsWith("12.5/20.5 MP"));
+        assertTrue(runs(slot.lore().get(1)).stream()
+                .filter(run -> run.style().decoration(TextDecoration.STRIKETHROUGH) == TextDecoration.State.TRUE)
+                .allMatch(run -> run.style().color() == NamedTextColor.DARK_AQUA
+                        || run.style().color() == NamedTextColor.WHITE));
+    }
+
+    @Test
+    void exactLoreRemainsLiteralButSemanticSectionsAndPromptFollowNormally() {
+        MenuButton item = MenuButton.builder(MenuIcon.vanilla("book"))
+                .exactName(Component.text("Native"))
+                .exactLore(Component.text("Native line"))
+                .line("Semantic line")
+                .onLeftClick(ActionVerb.SELECT, context -> { })
+                .literalItem()
                 .build();
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, button);
-
-        assertEquals(List.of(
-                "First Exact Line",
-                "Second Exact Line",
-                "",
-                "Ignored body",
-                "",
-                "CLICK to give the item!"), lore(slot));
+        assertEquals(List.of("Native line", "", "Semantic line", "", "CLICK to select!"), lore(item));
+        assertEquals(1, HouseMenuCompiler.compile(0, item).replaceableLoreLineCount());
     }
 
-    @Test
-    void progressUsesHouseFormattingAndAccentSegmentation() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("experience_bottle"))
+    private static void assertProgress(Number current, Number max, int expectedFill, String expectedPercent) {
+        MenuSlot slot = HouseMenuCompiler.compile(0, MenuDisplayItem.builder(MenuIcon.vanilla("experience_bottle"))
                 .name("Progress")
-                .progress("Progress to Level 2", 200, 1_000, AccentFamily.GOLD)
-                .build();
+                .progress("Progress", current, max)
+                .build());
+        assertEquals("Progress: " + expectedPercent, ComponentText.flatten(slot.lore().getFirst()));
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals(List.of(
-                "Progress to Level 2: 20%",
-                "-------------------- 200/1,000"), lore(slot));
-
-        Component firstLine = slot.lore().getFirst();
-        Component secondLine = slot.lore().get(1);
-
-        assertEquals(2, firstLine.children().size());
-        assertEquals(NamedTextColor.GRAY, firstLine.children().get(0).color());
-        assertEquals(AccentFamily.GOLD.light(), firstLine.children().get(1).color());
-
-        assertEquals(6, secondLine.children().size());
-        assertEquals(AccentFamily.GOLD.light(), secondLine.children().get(0).color());
-        assertEquals(TextDecoration.State.TRUE, secondLine.children().get(0).decoration(TextDecoration.STRIKETHROUGH));
-        assertEquals(NamedTextColor.GRAY, secondLine.children().get(1).color());
-        assertEquals(TextDecoration.State.TRUE, secondLine.children().get(1).decoration(TextDecoration.STRIKETHROUGH));
-        assertEquals(AccentFamily.GOLD.dark(), secondLine.children().get(4).color());
-        assertEquals(AccentFamily.GOLD.light(), secondLine.children().get(5).color());
+        int filled = 0;
+        int empty = 0;
+        for (ResolvedRun run : runs(slot.lore().get(1))) {
+            if (run.style().decoration(TextDecoration.STRIKETHROUGH) != TextDecoration.State.TRUE) {
+                continue;
+            }
+            int spaces = Math.toIntExact(run.text().codePoints().filter(codePoint -> codePoint == ' ').count());
+            if (run.style().color() == MenuProgressPalette.STANDARD.filled()) {
+                filled += spaces;
+            }
+            if (run.style().color() == NamedTextColor.WHITE) {
+                empty += spaces;
+            }
+            assertEquals(TextDecoration.State.TRUE, run.style().decoration(TextDecoration.BOLD));
+        }
+        assertEquals(expectedFill, filled);
+        assertEquals(25 - expectedFill, empty);
+        assertEquals(25, filled + empty);
     }
 
-    @Test
-    void progressPercentKeepsSingleDecimalWhenNeeded() {
-        MenuDisplayItem item = MenuDisplayItem.builder(MenuIcon.vanilla("experience_bottle"))
-                .name("Progress")
-                .progress("Progress to Level L", 3_432_908, 4_000_000, AccentFamily.GOLD)
-                .build();
+    private static List<String> lore(MenuDisplayItem item) {
+        return lore(HouseMenuCompiler.compile(0, item));
+    }
 
-        MenuSlot slot = HouseMenuCompiler.compile(13, item);
-
-        assertEquals("Progress to Level L: 85.8%", ComponentText.flatten(slot.lore().getFirst()));
+    private static List<String> lore(MenuButton item) {
+        return lore(HouseMenuCompiler.compile(0, item));
     }
 
     private static List<String> lore(MenuSlot slot) {
-        return slot.lore().stream()
-                .map(ComponentText::flatten)
-                .toList();
+        return slot.lore().stream().map(ComponentText::flatten).toList();
+    }
+
+    private static boolean hasRun(Component component, String text, TextColor color) {
+        return runs(component).stream()
+                .anyMatch(run -> run.text().contains(text) && run.style().color() == color);
+    }
+
+    private static TextColor resolvedColor(Component component) {
+        return runs(component).stream()
+                .filter(run -> !run.text().isEmpty())
+                .findFirst()
+                .orElseThrow()
+                .style()
+                .color();
+    }
+
+    private static List<ResolvedRun> runs(Component component) {
+        List<ResolvedRun> runs = new ArrayList<>();
+        appendRuns(component, Style.empty(), runs);
+        return runs;
+    }
+
+    private static void appendRuns(Component component, Style inherited, List<ResolvedRun> runs) {
+        Style resolved = inherited.merge(component.style(), Style.Merge.Strategy.ALWAYS);
+        if (component instanceof TextComponent text && !text.content().isEmpty()) {
+            runs.add(new ResolvedRun(text.content(), resolved));
+        }
+        component.children().forEach(child -> appendRuns(child, resolved, runs));
+    }
+
+    private record ResolvedRun(String text, Style style) {
     }
 }
